升级 JDK 至 17 && 代码清理